Fix invisible collapsed sidenav icons

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -473,6 +473,9 @@ ul#user-info {
       font-size: 14px;
       line-height: 16px;
     }
+    .motif-icon {
+      flex-shrink: 0;
+    }
     
   }
   .sidenav-item-mini {
